ENH: prep slides for lectures 4 and 8

--- a/Fall2020/04_organizing_data_with_pandas_1/the_index.ipynb
+++ b/Fall2020/04_organizing_data_with_pandas_1/the_index.ipynb
@@ -770,7 +770,7 @@
     "Relative to `im_ex` notice a few things:\n",
     "\n",
     "- The row labeled `1` appears in `im_ex` but not `df_tiny` \n",
-    "- For row labels that appear in both, they are not in the same position\n",
+    "- Some row labels appear in both, but they are not always in the same position\n",
     "  within each DataFrame\n",
     "- Certain columns appear only in `df_tiny`\n",
     "- The `Imports` and `Exports` columns are the 6th and 5th columns of\n",
@@ -974,9 +974,131 @@
     }
    },
    "source": [
-    "### Handling Missing Data\n",
-    "\n",
-    "<p style=\"font-size: 40; color: red\"> Show relevant part of dataframe here... too much to keep in head</p>\n",
+    "### Handling Missing Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "hide-output": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Consumption</th>\n",
+       "      <th>Exports</th>\n",
+       "      <th>GDP</th>\n",
+       "      <th>GovExpend</th>\n",
+       "      <th>Imports</th>\n",
+       "      <th>country</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.165661</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.200063</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.137718</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.151585</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.100646</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.144688</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.036081</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.117272</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Consumption   Exports  GDP  GovExpend   Imports  country  year\n",
+       "0          NaN  1.165661  NaN        NaN  1.200063      NaN   NaN\n",
+       "1          NaN       NaN  NaN        NaN       NaN      NaN   NaN\n",
+       "2          NaN  1.137718  NaN        NaN  1.151585      NaN   NaN\n",
+       "3          NaN  1.100646  NaN        NaN  1.144688      NaN   NaN\n",
+       "4          NaN  1.036081  NaN        NaN  1.117272      NaN   NaN"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "im_ex_tiny = df_tiny + im_ex\n",
+    "im_ex_tiny"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "source": [
     "For all elements in row `1` or columns\n",
     "`[\"country\", \"year\", \"GovExpend\", \"Consumption\", \"GDP\"]`,\n",
     "the value in `im_ex_tiny` is `NaN`\n",
@@ -988,7 +1110,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": ""
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -1312,7 +1434,7 @@
    "source": [
     "Notice that pandas did a few things for us.\n",
     "\n",
-    "- After computing `.mean()`, the row labels (index) were the former column names\n",
+    "- After computing `.mean()`, the index was set to the former column names\n",
     "- These column names were used to align data when we wanted asked pandas to\n",
     "  compute the difference  "
    ]
@@ -1327,25 +1449,26 @@
    "source": [
     "Suppose that someone asked you, “What was the GDP in the US in 2010?”\n",
     "\n",
-    "To compute that using `df_year` you might do something like this:"
+    "To compute that statistic using `df_year` you might do something like this:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "hide-output": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "14.992052727"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'df_year' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-23a2e456c205>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_year\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_year\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"country\"\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m\"United States\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"GDP\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloc\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2010\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_year' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2248,7 +2371,7 @@
     }
    },
    "source": [
-    "`tuple` in row slicing will be used to denote a single hierarchical\n",
+    "A `tuple` in row slicing will be used to denote a single hierarchical\n",
     "index and must include a value for each level \n",
     "\n",
     "**Example**: `(\"United States\", 2010)` in `wdi.loc[(\"United States\", 2010), \"GDP\"]`"
@@ -2276,18 +2399,67 @@
     }
    },
    "source": [
-    "**Row slicing examples**\n",
-    "\n",
-    "1. `wdi.loc[\"United States\"]`: all rows where the *outer* most index value is\n",
-    "  equal to `United States`  \n",
-    "1. `wdi.loc[(\"United States\", 2010)]`: all rows where the *outer-most* index value\n",
-    "  is equal to `\"United States` and the second level is equal to `2010`  \n",
-    "1. `wdi.loc[[\"United States\", \"Canada\"]]`: all rows where the *outer-most* index is\n",
-    "  either `\"United States\"` or `\"Canada\"`  \n",
-    "1. `wdi.loc[([\"United States\", \"Canada\"], [2010, 2011]), :]`: all rows where the\n",
+    "**Row slicing examples**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**1** `wdi.loc[\"United States\"]`: all rows where the *outer* most index value is\n",
+    "  equal to `United States`  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**2** `wdi.loc[(\"United States\", 2010)]`: all rows where the *outer-most* index value\n",
+    "  is equal to `\"United States` and the second level is equal to `2010`  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**3** `wdi.loc[[\"United States\", \"Canada\"]]`: all rows where the *outer-most* index is\n",
+    "  either `\"United States\"` or `\"Canada\"`  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**4** `wdi.loc[([\"United States\", \"Canada\"], [2010, 2011]), :]`: all rows where the\n",
     "  *outer-most* index is either `\"United States` or `\"Canada\"` AND where the\n",
-    "  second level index is either `2010` or `2011`  \n",
-    "1. `wdi.loc[[(\"United States\", 2010), (\"Canada\", 2011)], :]`: all rows where the the\n",
+    "  second level index is either `2010` or `2011`  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "**5** `wdi.loc[[(\"United States\", 2010), (\"Canada\", 2011)], :]`: all rows where the the\n",
     "  two hierarchical indices are either `(\"United States\", 2010)` or\n",
     "  `(\"Canada\", 2011)`  "
    ]
@@ -2697,7 +2869,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
     "Notice that the `:` in the first part of `[:, [\"A\", \"D\"]]`\n",
     "instructed pandas to give us rows for all values of the outer most index\n",
@@ -3931,9 +4107,9 @@
   "celltoolbar": "Slideshow",
   "filename": "the_index.rst",
   "kernelspec": {
-   "display_name": "py3sglyon",
+   "display_name": "Python [conda env:qeds]",
    "language": "python",
-   "name": "py3sglyon"
+   "name": "conda-env-qeds-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3945,7 +4121,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.7"
   },
   "title": "The Index"
  },
