wip minimal progress on convexity lecture

--- a/Fall2020/05_convex_optimization_1/theory.ipynb
+++ b/Fall2020/05_convex_optimization_1/theory.ipynb
@@ -4,21 +4,102 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "j"
+    "# Convex Optimization: Theory\n",
+    "\n",
+    "**Prerequisites**\n",
+    "\n",
+    "- TODO\n",
+    "- Linear Algebra\n",
+    "\n",
+    "\n",
+    "**Outcomes**\n",
+    "\n",
+    "TODO: clean this up"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Outline\n",
+    "\n",
+    "- Mathematical Functions\n",
+    "- Convexity\n",
+    "- Linear Programming\n",
+    "- The Dual Problem\n",
+    "- `cvxopt` and `scipy.optimize.linprog`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mathematical Functions\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Convex Functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Linear Programs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Dual Problem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Python Tools: `cvxopt` and `scipy.optimize.linprog`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `cvxopt`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### `scipy.optimize.linprog`"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.2.0",
-   "name": "julia-1.2"
-  },
-  "orig_nbformat": 2
+   "display_name": "Python 3.8.5 64-bit ('qeds': conda)",
+   "language": "python",
+   "name": "python38564bitqedscondaa653f8b53f7c49afbbdf9febe39d1a4a"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
