--- a/Fall2020/05_convex_optimization_1/algorithms.ipynb
+++ b/Fall2020/05_convex_optimization_1/algorithms.ipynb
@@ -17,6 +17,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,10 +35,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.2.0",
-   "name": "julia-1.2"
+   "display_name": "Python [conda env:qeds]",
+   "language": "python",
+   "name": "conda-env-qeds-py"
   },
-  "orig_nbformat": 2
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
