--- a/Fall2020/05_convex_optimization_1/applications.ipynb
+++ b/Fall2020/05_convex_optimization_1/applications.ipynb
@@ -15,14 +15,46 @@
     "\n",
     "TODO: clean this up"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
-  "kernelspec": {
-   "display_name": "Julia 1.2.0",
-   "name": "julia-1.2"
+  "@webio": {
+   "lastCommId": null,
+   "lastKernelId": null
   },
-  "orig_nbformat": 2
+  "kernelspec": {
+   "display_name": "Python [conda env:qeds]",
+   "language": "python",
+   "name": "conda-env-qeds-py"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.5"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
