--- a/Fall2020/05_convex_optimization_1/welfare_theory.ipynb
+++ b/Fall2020/05_convex_optimization_1/welfare_theory.ipynb
@@ -35,21 +35,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:qeds]",
+   "display_name": "Julia 1.2.0",
    "language": "python",
-   "name": "conda-env-qeds-py"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "name": "julia-1.2"
   }
  },
  "nbformat": 4,
