ENH: more wip on convexity and lp

--- a/Fall2020/05_convex_optimization_1/theory.ipynb
+++ b/Fall2020/05_convex_optimization_1/theory.ipynb
@@ -658,8 +658,15 @@
     "format this as a matrix. Finally, the objective function is the number of pianos shipped along each\n",
     "route multiplied costs found in the costs table.\n",
     "\n",
-    "Your task is to formulate the transportation problem as a linear program. That is define the vector $c$, matrix $A$ and vector $b$ that appropriately defines the problem as described above."
+    "Your task is to formulate the transportation problem as a linear program. That is define the vector $c$, matrix $A$ and vector $b$ that appropriately defines the problem as described above.\n",
+    "\n",
+    "*Hint:* the matrix $A$ will have 5 rows and 6 columns."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -695,7 +702,9 @@
    "source": [
     "### References\n",
     "\n",
-    "Boyd, Stephen, Stephen P. Boyd, and Lieven Vandenberghe. 2004. Convex Optimization. Cambridge University Press."
+    "Boyd, Stephen, Stephen P. Boyd, and Lieven Vandenberghe. 2004. Convex Optimization. Cambridge University Press.\n",
+    "\n",
+    "Jeffrey Humpherys And Tyler J. Jarvis. \"Labs for Foundations of Applied Mathematics Volume 2\""
    ]
   },
   {
