--- a/Fall2020/05_convex_optimization_1/optimal_transport.ipynb
+++ b/Fall2020/05_convex_optimization_1/optimal_transport.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Convex Optimization: Welfare Theorems\n",
+    "# Convex Optimization: Optimal Transport\n",
     "\n",
     "**Prerequisites**\n",
     "\n",
@@ -36,10 +36,16 @@
  "metadata": {
   "kernelspec": {
    "display_name": "Julia 1.2.0",
-   "language": "python",
+   "language": "julia",
    "name": "julia-1.2"
+  },
+  "language_info": {
+   "file_extension": ".jl",
+   "mimetype": "application/julia",
+   "name": "julia",
+   "version": "1.5.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
