ENH: update LP lecture

--- a/Fall2020/05_convex_optimization_1/03_optimal_transport.ipynb
+++ b/Fall2020/05_convex_optimization_1/03_optimal_transport.ipynb
@@ -45,15 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "execution": {
-     "iopub.execute_input": "2020-08-28T21:55:56.892553Z",
-     "iopub.status.busy": "2020-08-28T21:55:56.892349Z",
-     "iopub.status.idle": "2020-08-28T21:55:56.950480Z",
-     "shell.execute_reply": "2020-08-28T21:55:56.949909Z",
-     "shell.execute_reply.started": "2020-08-28T21:55:56.892530Z"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -63,14 +55,14 @@
        "        <iframe\n",
        "            width=\"1400\"\n",
        "            height=\"800\"\n",
-       "            src=\"https://www.youtube.com/embed/zo46TEp6FB8\"\n",
+       "            src=\"https://www.youtube.com/embed/zo46TEp6FB8?start=1685&end=2550\"\n",
        "            frameborder=\"0\"\n",
        "            allowfullscreen\n",
        "        ></iframe>\n",
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7f850febe760>"
+       "<IPython.lib.display.YouTubeVideo at 0x7ff0a0601d60>"
       ]
      },
      "execution_count": 6,
@@ -80,10 +72,8 @@
    ],
    "source": [
     "from IPython.lib.display import YouTubeVideo\n",
-    "\n",
-    "# start at 28:02\n",
-    "# stop at about 42:30 -- TODO: refine this\n",
-    "YouTubeVideo('zo46TEp6FB8', 1400, 800)"
+    " \n",
+    "YouTubeVideo('zo46TEp6FB8', 1400, 800, start=1685, end=2550)"
    ]
   },
   {
