--- a/Fall2020/Assignments/Homework1.ipynb
+++ b/Fall2020/Assignments/Homework1.ipynb
@@ -4,26 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Linear Algebra: Assignment 1\n",
+    "# Assignment 1\n",
     "\n",
     "**Name**: (Please add your name here)\n",
     "\n",
     "\n",
-    "This assignment has 3 questions. These questions are worth 15 points each.\n",
+    "This assignment has 5 questions. These questions are worth 10 points each.\n",
     "\n",
-    "Please be aware that each of the questions below will involve writing code. As previously mentioned, we expect all code written for this class to reflect good coding standards."
+    "Please be aware that each of the questions below will involve writing code. As previously mentioned, we expect all code written for this class to reflect good coding standards.\n",
+    "\n",
+    "This assignment is due by 5:30 pm on September 18, 2020 (Friday)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "import pandas as pd\n",
     "\n",
     "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Linear Algebra"
    ]
   },
   {
@@ -450,13 +460,278 @@
    "source": [
     "%timeit qr(A_big)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Pandas\n",
+    "\n",
+    "The following questions about pandas will use the same dataset as we used in class."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>state</th>\n",
+       "      <th>Arizona</th>\n",
+       "      <th>California</th>\n",
+       "      <th>Florida</th>\n",
+       "      <th>Illinois</th>\n",
+       "      <th>Michigan</th>\n",
+       "      <th>New York</th>\n",
+       "      <th>Texas</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>2000-01-01</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000-02-01</td>\n",
+       "      <td>4.1</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.7</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000-03-01</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>4.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000-04-01</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>4.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2000-05-01</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>5.1</td>\n",
+       "      <td>3.7</td>\n",
+       "      <td>4.3</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>4.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "state       Arizona  California  Florida  Illinois  Michigan  New York  Texas\n",
+       "Date                                                                         \n",
+       "2000-01-01      4.1         5.0      3.7       4.2       3.3       4.7    4.6\n",
+       "2000-02-01      4.1         5.0      3.7       4.2       3.2       4.7    4.6\n",
+       "2000-03-01      4.0         5.0      3.7       4.3       3.2       4.6    4.5\n",
+       "2000-04-01      4.0         5.1      3.7       4.3       3.3       4.6    4.4\n",
+       "2000-05-01      4.0         5.1      3.7       4.3       3.5       4.6    4.3"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "url = \"https://datascience.quantecon.org/assets/data/state_unemployment.csv\"\n",
+    "unemp_raw = pd.read_csv(url, parse_dates=[\"Date\"])\n",
+    "\n",
+    "unemp_all = (\n",
+    "    unemp_raw\n",
+    "    .reset_index()\n",
+    "    .pivot_table(index=\"Date\", columns=\"state\", values=\"UnemploymentRate\")\n",
+    ")\n",
+    "\n",
+    "states = [\n",
+    "    \"Arizona\", \"California\", \"Florida\", \"Illinois\",\n",
+    "    \"Michigan\", \"New York\", \"Texas\"\n",
+    "]\n",
+    "unemp = unemp_all[states]\n",
+    "unemp.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 4**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Print the DataFrame's index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Print the DataFrame's columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) Use indexing to select the data for all columns starting in June 2007 and ending in December 2010. Save this data into a new DataFrame called `unemp_gr`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unemp_gr = None  # Index here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) Plot the data from `unemp_gr`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 5**\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "a) Using `unemp_gr` from the previous section, create a new DataFrame that has the month-by-month difference in the unemployment rate. Save this DataFrame as `unemp_gr_diff`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "unemp_gr_diff = None  # Compute differences"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b) Now compute the cumulative sum of the differences and save this as a DataFrame called `unemp_gr_cdiff`. This will tell us the total difference of the unemployment from June 2007."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c) Plot the `unemp_gr_cdiff` DataFrame as a bar plot for one state."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "d) Which state saw the biggest increase in their unemployment rate during this time period?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3chase",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py3chase"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -468,7 +743,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
