update graphs in bls data

--- a/Fall2020/L10_api_unemployment/v4_bls_exploration.ipynb
+++ b/Fall2020/L10_api_unemployment/v4_bls_exploration.ipynb
@@ -538,43 +538,50 @@
     "fig, ax = plt.subplots(2, 1, figsize=(10, 8), sharex=True)\n",
     "\n",
     "df_covid.plot(\n",
-    "    y=\"eu\", ax=ax[0],\n",
+    "    y=\"ue\", ax=ax[0],\n",
     "    color=\"k\", linewidth=1.0, legend=False\n",
     ")\n",
     "df_gr.plot(\n",
-    "    y=\"eu\", ax=ax[0],\n",
+    "    y=\"ue\", ax=ax[0],\n",
     "    color=\"k\", alpha=0.5, linestyle=\"--\", linewidth=0.5,\n",
     "    legend=False\n",
     ")\n",
-    "ax[0].set_title(\"Employed to Unemployed\")\n",
-    "ax[0].set_ylabel(\"Percent of labor force\")\n",
+    "ax[0].set_title(\"Unemployed to Employed\")\n",
+    "ax[0].set_ylabel(\"Percent of unemployed\")\n",
     "\n",
     "df_covid.plot(\n",
-    "    y=\"ue\", ax=ax[1],\n",
+    "    y=\"eu\", ax=ax[1],\n",
     "    color=\"k\", linewidth=1.0, legend=False\n",
     ")\n",
     "df_gr.plot(\n",
-    "    y=\"ue\", ax=ax[1],\n",
+    "    y=\"eu\", ax=ax[1],\n",
     "    color=\"k\", alpha=0.5, linestyle=\"--\", linewidth=0.5,\n",
     "    legend=False\n",
     ")\n",
-    "ax[1].set_title(\"Unemployed to Employed\")\n",
+    "ax[1].set_title(\"Employed to Unmployed\")\n",
     "ax[1].set_xlabel(\"Days since one year before trough\")\n",
-    "ax[1].set_ylabel(\"Percent of labor force\")\n",
+    "ax[1].set_ylabel(\"Percent of employed\")\n",
     "\n",
     "for _ax in ax:\n",
     "    _ax.spines[\"right\"].set_visible(False)\n",
     "    _ax.spines[\"top\"].set_visible(False)\n",
     "\n",
-    "ax[0].hlines(pt_nt[\"eu\"].mean(), 0, 5*365, color=\"Green\", linewidth=0.75, alpha=0.75)\n",
-    "ax[1].hlines(pt_nt[\"ue\"].mean(), 0, 5*365, color=\"Green\", linewidth=0.75, alpha=0.75)\n",
+    "ax[0].hlines(pt_nt[\"ue\"].mean(), 0, 5*365, color=\"Green\", linewidth=0.75, alpha=0.75)\n",
+    "ax[1].hlines(pt_nt[\"eu\"].mean(), 0, 5*365, color=\"Green\", linewidth=0.75, alpha=0.75)\n",
     "\n",
-    "ax[0].annotate(\"COVID\", (425, 0.10))\n",
-    "ax[0].annotate(\"Great Recession\", (750, 0.025), alpha=0.5)\n",
-    "ax[0].annotate(\"Normal times\", (1000, 0.0065), color=\"Green\", alpha=0.75)\n",
+    "ax[0].annotate(\"COVID\", (550, 0.35))\n",
+    "ax[0].annotate(\"Great Recession\", (750, 0.10), alpha=0.5)\n",
+    "ax[0].annotate(\"Normal times\", (1000, 0.24), color=\"Green\", alpha=0.75)\n",
     "\n",
     "fig.tight_layout()\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
