--- a/Fall2020/L13_unemployment_modeling/modeling_decisions.ipynb
+++ b/Fall2020/L13_unemployment_modeling/modeling_decisions.ipynb
@@ -629,7 +629,7 @@
     "- The COVID recession has an extremely sharp movement in the employment distribution\n",
     "- The great recession featured a prolonged departure from pre-crisis levels\n",
     "\n",
-    "Our goal in this lecture is to see if there are any deviations from $\\alpha_t = \\bar{\\alpha}, \\beta_t = \\bar{\\beta}\\; \\forall t$ that allow the Lake model to better capture times of stress in US labor markets"
+    "Our goal in this lecture is to see if there are any deviations from $\\alpha_t = \\bar{\\alpha}, \\beta_t = \\bar{\\beta}\\; \\forall t$ that allow the Lake model to better replicate times of stress in US labor markets"
    ]
   },
   {
@@ -957,7 +957,7 @@
     "\n",
     "Finally, we assume that for $N$ (a finite number of) periods, $\\alpha$ and $\\beta$ move to new values $\\hat{\\alpha}$ and $\\hat{\\beta}$\n",
     "\n",
-    "After the $N$ periods, $\\alpha$ and $\\beta$ return to $\\\\hat{\\alpha}$ and $\\hat{\\beta}$\n",
+    "After the $N$ periods, $\\alpha$ and $\\beta$ return to $\\bar{\\alpha}$ and $\\bar{\\beta}$\n",
     "\n",
     "Mathematically, these assumptions can be expressed as follows\n",
     "\n",
